#159 - Tooltip Overlap Issue

--- a/src/sass/components/_dash-filters.sass
+++ b/src/sass/components/_dash-filters.sass
@@ -17,6 +17,3 @@
 
 .dash-filters__wrapper
   align-items: flex-start
-
-.qlik-select
-  z-index : 99999 !important;
