--- a/src/sass/components/_qlik.sass
+++ b/src/sass/components/_qlik.sass
@@ -1,3 +1,3 @@
 .qlik-select
-  width: 200px
-  z-index: 100
+  width: 200px;
+  z-index: 99998 !important;
