--- a/src/sass/components/_tab-tooltip.sass
+++ b/src/sass/components/_tab-tooltip.sass
@@ -1,6 +1,7 @@
 ﻿.tippy-tooltip
-	text-align: left;
+   text-align: left;
 .tooltip-header
-	font-weight: bold;
+  font-weight: bold;
 .tippy-popper 
-    max-width: 560px;
+  max-width: 560px;
+  z-index: 99999 !important	
